@@ -1647,9 +1647,9 @@ SecurityLoadPropertyAccessList(void)
 	return;
 
 #ifndef __UNIXOS2__
-    f = fopen(SecurityPolicyFile, "r");
+    f = Fopen(SecurityPolicyFile, "r");
 #else
-    f = fopen((char*)__XOS2RedirRoot(SecurityPolicyFile), "r");
+    f = Fopen((char*)__XOS2RedirRoot(SecurityPolicyFile), "r");
 #endif    
     if (!f)
     {
@@ -1733,7 +1733,7 @@ SecurityLoadPropertyAccessList(void)
     }
 #endif /* PROPDEBUG */
 
-    fclose(f);
+    Fclose(f);
 } /* SecurityLoadPropertyAccessList */
 
 
